wacc/test/golden/syntaxErr.if.ifNothen
# if missing then clause

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  if true 
  else
    skip
  fi
end



In test/wacc_examples/invalid/syntaxErr/if/ifNothen.wacc (line 13, column 3):
  unexpected "else"
  expected "then", arithmetic operator, comparison operator, end of true, or logical operator
  >  if true 
  >  else
     ^^^^
  >    skip